Fixed underline style for links that wrap.

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -32,7 +32,6 @@ h1, h2, h3 {
 a {
   color: inherit;
   text-decoration: none;
-  display: inline-block;
 }
 dl {
   margin: 0;
