--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -18,6 +18,7 @@
     width: 230px;
     height: 75px;
     overflow: hidden;
+    display: inline-block;
   }
 }
 .nav-primary {
